@@ -1,10 +1,10 @@
-# Copyright 1999-2010 Gentoo Foundation
+# Copyright 1999-2011 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-kernel/ck-sources/Attic/ck-sources-2.6.36-r4.ebuild,v 1.1 2010/12/12 10:32:14 nelchael Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-kernel/ck-sources/Attic/ck-sources-2.6.38-r1.ebuild,v 1.1 2011/05/07 22:31:39 nelchael Exp $
 
 ETYPE="sources"
 K_WANT_GENPATCHES="base extras"
-K_GENPATCHES_VER="7"
+K_GENPATCHES_VER="5"
 
 inherit kernel-2
 detect_version
@@ -14,7 +14,7 @@ DESCRIPTION="Con Kolivas' high performance patchset + Gentoo patchset sources"
 HOMEPAGE="http://dev.gentoo.org/~mpagano/genpatches/
 	http://www.kernel.org/pub/linux/kernel/people/ck/patches/2.6/"
 
-CK_VERSION="2"
+CK_VERSION="3"
 CK_REVISION=""
 K_SECURITY_UNSUPPORTED="1"
 
