@@ -1,6 +1,15 @@
 # ChangeLog for sys-kernel/ck-sources
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-kernel/ck-sources/ChangeLog,v 1.193 2011/04/06 17:14:25 nelchael Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-kernel/ck-sources/ChangeLog,v 1.194 2011/05/07 22:31:39 nelchael Exp $
+
+*ck-sources-2.6.38-r1 (07 May 2011)
+
+  07 May 2011; Krzysztof Pawlik <nelchael@gentoo.org>
+  -ck-sources-2.6.35-r7.ebuild, -ck-sources-2.6.35-r8.ebuild,
+  -ck-sources-2.6.35-r9.ebuild, -ck-sources-2.6.36-r3.ebuild,
+  -ck-sources-2.6.36-r4.ebuild, -ck-sources-2.6.36-r5.ebuild,
+  +ck-sources-2.6.38-r1.ebuild:
+  Version bump, remove old.
 
 *ck-sources-2.6.38 (06 Apr 2011)
 
